--- a/src/index.css
+++ b/src/index.css
@@ -54,15 +54,18 @@ body {
   width: 100%;
 }
 
+.list-container {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
 .task {
   background: #f4f4f4;
   margin: 5px;
   padding: 10px 20px;
-  cursor: pointer;
-}
-
-.task.reminder {
-  border-left: 5px solid green;
+  height: 300px;
+  width: 200px;
 }
 
 .task h3 {
