--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,6 @@ body {
 .card {
   background: #f4f4f4;
   margin: 5px;
-  padding: 10px 20px;
   height: 300px;
   width: 200px;
   perspective: 1000px;
@@ -95,6 +94,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.poster {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .card-face-back {
