--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,7 @@ footer {
   text-align: center;
 }
 
-.results {
+/* .results {
   padding: 0;
   margin: 0;
   margin-top: 20px;
@@ -245,4 +245,9 @@ footer {
 
 .result-card .controls button {
   margin-right: 10px;
+} */
+
+.testing {
+  background-color: hotpink;
+  display: flex;
 }
