--- a/src/index.css
+++ b/src/index.css
@@ -197,57 +197,38 @@ footer {
   text-align: center;
 }
 
-/* .results {
-  padding: 0;
-  margin: 0;
-  margin-top: 20px;
-}
-
-.results li {
-  list-style: none;
-}
-
-.result-card {
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.result-card .poster-wrapper img,
-.filler-poster {
-  width: 75px;
-  height: 113px;
-  background-color: #dbdada;
-  border-radius: 5px;
-  margin-right: 15px;
-  display: block;
-  color: transparent;
-}
-
-.result-card .info {
+.testing {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  overflow: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: 400px;
+  box-shadow: 0px 3px 3px 3px rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
+  border-radius: 10px;
+  padding: 10px;
 }
 
-.result-card .info .title {
-  font-size: 1.25rem;
-  color: var(--primary);
-  font-weight: 600;
-  margin: 0;
-}
-
-.result-card .info .release-date {
-  font-size: 1.25rem;
-  font-weight: 300;
-  color: var(--primary);
-  margin: 0;
-}
-
-.result-card .controls button {
-  margin-right: 10px;
-} */
-
-.testing {
-  background-color: hotpink;
+.results {
   display: flex;
+}
+
+.poster {
+  width: auto;
+}
+
+.poster img {
+  width: 100px;
+  height: 150px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px 3px rgba(0, 0, 0, 0.3);
+  margin: 10px;
+}
+
+.movie-info {
+  margin: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
