--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@ body {
 }
 
 .container {
-  max-width: 500px;
-  margin: 30px auto;
+  max-width: 100%;
+  margin: 30px 10px;
   overflow: auto;
   min-height: 300px;
   border: 1px solid steelblue;
-  padding: 30px;
+  padding: 30px 10px;
   border-radius: 5px;
 }
 
@@ -57,6 +57,7 @@ body {
 .list-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
@@ -111,11 +112,25 @@ body {
 .card-content {
   width: 100%;
   height: 100%;
+  padding: 5px;
+  /* overflow: hidden; */
+  overflow-y: auto;
 }
 
 .card-header {
   position: relative;
-  padding: 30px 30px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-title {
+  margin-bottom: 20px;
+}
+
+.delete-btn {
+  position: fixed;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
 .card-header::after {
