--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,23 @@ body {
   object-fit: cover;
 }
 
+.rating {
+  position: fixed;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  /* width: 20px;
+  height: 30px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  z-index: 1;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
 .card-face-back {
   background-color: var(--light);
   transform: rotateY(180deg);
