--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ body {
   height: 100%;
   transition: transform 1s;
   transform-style: preserve-3d;
-  cursor: pointer;
+  /* cursor: pointer; */
   position: relative;
 }
 
@@ -110,13 +110,41 @@ body {
   right: 0.5rem;
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
-  /* width: 20px;
-  height: 30px; */
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 10px;
   z-index: 1;
+  border-radius: 3px;
+  cursor: pointer;
+  backface-visibility: hidden;
+}
+
+.dots {
+  background-color: rgba(0, 0, 0, 0.7);
+  display: block;
+  z-index: 1;
+  position: fixed;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  padding: 0;
+  margin: 0;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  backface-visibility: hidden;
+}
+
+.dots-back {
+  /* background-color: rgba(0, 0, 0, 0.3); */
+  display: block;
+  z-index: 1;
+  /* position: fixed;
+  bottom: 0.5rem;
+  left: 0.5rem; */
+  padding: 0;
+  margin: 0;
+  border: none;
   border-radius: 3px;
   cursor: pointer;
   backface-visibility: hidden;
