--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,35 @@ body {
   backface-visibility: hidden;
 }
 
+.modal {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 1;
+  position: fixed;
+  font-size: 1.5rem;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.modal-header {
+  text-align: center;
+  margin: 1rem;
+}
+
+.modal-rating {
+  width: 4rem;
+  height: 3rem;
+  font-size: 20px;
+  text-align: center;
+}
+
 .card-face-back {
   background-color: var(--light);
   transform: rotateY(180deg);
