--- a/src/index.css
+++ b/src/index.css
@@ -287,17 +287,25 @@ footer {
   text-align: center;
 }
 
+.results-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .testing {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   overflow-y: auto;
   width: 100%;
+  max-width: 650px;
   height: 400px;
   box-shadow: 0px 3px 3px 3px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
   border-radius: 10px;
   padding: 10px;
+  list-style: none;
 }
 
 .results {
